; ModuleID = '/home/carl/AnghaBench/hashcat/deps/secp256k1/src/extr_secp256k1.c_secp256k1_context_set_illegal_callback.c'
source_filename = "/home/carl/AnghaBench/hashcat/deps/secp256k1/src/extr_secp256k1.c_secp256k1_context_set_illegal_callback.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { %struct.TYPE_5__ }
%struct.TYPE_5__ = type { void (i8*, i8*)*, i8* }

@secp256k1_context_no_precomp = common dso_local global %struct.TYPE_6__* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @secp256k1_context_set_illegal_callback(%struct.TYPE_6__* %0, void (i8*, i8*)* %1, i8* %2) #0 {
  %4 = alloca %struct.TYPE_6__*, align 8
  %5 = alloca void (i8*, i8*)*, align 8
  %6 = alloca i8*, align 8
  store %struct.TYPE_6__* %0, %struct.TYPE_6__** %4, align 8
  store void (i8*, i8*)* %1, void (i8*, i8*)** %5, align 8
  store i8* %2, i8** %6, align 8
  %7 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %8 = load %struct.TYPE_6__*, %struct.TYPE_6__** @secp256k1_context_no_precomp, align 8
  %9 = icmp ne %struct.TYPE_6__* %7, %8
  %10 = zext i1 %9 to i32
  %11 = call i32 @ARG_CHECK_NO_RETURN(i32 %10)
  %12 = load void (i8*, i8*)*, void (i8*, i8*)** %5, align 8
  %13 = icmp eq void (i8*, i8*)* %12, null
  br i1 %13, label %14, label %15

14:                                               ; preds = %3
  store void (i8*, i8*)* @secp256k1_default_illegal_callback_fn, void (i8*, i8*)** %5, align 8
  br label %15

15:                                               ; preds = %14, %3
  %16 = load void (i8*, i8*)*, void (i8*, i8*)** %5, align 8
  %17 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %18 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %17, i32 0, i32 0
  %19 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %18, i32 0, i32 0
  store void (i8*, i8*)* %16, void (i8*, i8*)** %19, align 8
  %20 = load i8*, i8** %6, align 8
  %21 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %22 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %21, i32 0, i32 0
  %23 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %22, i32 0, i32 1
  store i8* %20, i8** %23, align 8
  ret void
}

declare dso_local i32 @ARG_CHECK_NO_RETURN(i32) #1

declare dso_local void @secp256k1_default_illegal_callback_fn(i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
